<resources>
    <string name="app_name">CurriculumVitaeApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Curriculum Vitae App</string>
    <string name="nav_header_subtitle">my_cv_group3@mail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">About me</string>
    <string name="menu_slideshow">Work experience</string>
    <string name="menu_tools">Contact details</string>

    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!-- Home -->
    <string name="name_qualif">"John Doe\nQualified Android Programmer"</string>

    <string name="summary">"I count on several years of experience, working with Android Kotlin developments to enrich UI activities to give the user a great quality experience."</string>

    <string name="achievements">"I have participated in the XII Annual Android Coding Marathon, obtaining the 15th place in Teams over an group of 15,000 teams form different continents, as well as I was recognized with the "Fastest Coding Award" for two years consecutively."</string>

    <string name="coordinates">"* Website: www.kotlin_coder.com \n* Youtube channel: Kotlin Coder \n* Vlog: Modern Kotlin Practices. "</string>

    <!-- About Me -->
    <string name="aboutMe">Hi! I am a Java developer with over 3 years of experience. I have worked with
        object oriented programming, Spring Framework, relational and non-relational databases to build
        dynamic web applications.  I am currently enrolled in Mobile Device
        Programming course and learning to build android apps.  </string>

    <string name="aboutMe2nd">
        I have also worked with cross-functional team, multi-cultural workplace and agile.
        In my free time, I enjoy reading books, watching movies and travelling.
    </string>

    <string name="work_experience">PROFESSIONAL EXPERIENCE

CAREER NOTE:
    Completed on-campus studies and currently taking distance education courses to complete a Master\'s
    Degree in Computer Science (Available for full-time, W-2 employment).LIYANET ENGINEERING and TECHNOLOGY
    (Formerly Liya Enterprise Ltd), Asmara, Eritrea• 2015-2018 Software engineer specializing in Java/J2EE
    technologies to develop applications for different clients.

Senior Software Engineer • 2015-2018
    Planned, designed and proposed new development projects. Contributed to all aspects of the software
    development life cycle for new and existing applications. Applied new technologies to ongoing projects.
    Supervised and mentored junior programmers.

Tasks Performed:
•	Played key role in design, development, and deployment of application to production.
•	Designed database schema and implemented using MySQL.
•	Exposed services through REST-ful design.
•	Wrote Unit and integration tests for system
•	Used Maven to build the modules, Jenkins and Git as code repository
•	Participated in daily scrums and sprint planning

Achievements:
•	Deployed application for Ministry of Water, Land and Environment for management of water usage throughout Eritrea.
</string>

</resources>
