<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.curriculumvitaeapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_aboutme"
        android:name="com.example.curriculumvitaeapp.ui.aboutme.AboutMeFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_aboutme" />

    <fragment
        android:id="@+id/nav_workexperience"
        android:name="com.example.curriculumvitaeapp.ui.workexperience.WorkExperienceFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_workexperience" />

    <fragment
        android:id="@+id/nav_contactdetails"
        android:name="com.example.curriculumvitaeapp.ui.contactdetails.ContactDetailsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_contactdetails" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.curriculumvitaeapp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.curriculumvitaeapp.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>