<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#FFFFFF">

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.158"
            app:srcCompat="@drawable/person_ico" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv1"
            android:text="Summary"
            android:textColor="#888888"
            android:textStyle="bold"
            android:textSize="16dp"
            android:gravity="left"
            android:layout_marginTop="2dp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv2"
            android:text="@string/summary"
            android:textColor="#888888"
            android:textStyle="bold"
            android:textSize="14dp"
            android:padding="10dp"
            android:layout_marginTop="1dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv3"
            android:text="Achievements"
            android:textColor="#888888"
            android:textStyle="bold"
            android:textSize="16dp"
            android:padding="10dp"
            android:layout_marginTop="3dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv4"
            android:text="@string/achievements"
            android:textColor="#888888"
            android:textStyle="bold"
            android:textSize="14dp"
            android:padding="10dp"
            android:layout_marginTop="1dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv5"
            android:text="My coordinates"
            android:textColor="#888888"
            android:textStyle="bold"
            android:textSize="16dp"
            android:padding="10dp"
            android:layout_marginTop="3dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv6"
            android:text="@string/coordinates"
            android:textColor="#888888"
            android:textStyle="bold"
            android:textSize="14dp"
            android:padding="10dp"
            android:layout_marginTop="1dp"/>

<!--        <WebView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="0.9"-->
<!--            android:id="@+id/wview">-->
<!--        </WebView>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="0dp"-->
<!--            android:layout_weight="0.2"-->
<!--            android:orientation="horizontal">-->



<!--            <Button-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/bt1"-->
<!--                android:text="Date Picker"-->
<!--                android:layout_weight="0.5"/>-->

<!--            <Button-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:id="@+id/bt2"-->
<!--                android:text="Time Picker"-->
<!--                android:layout_weight="0.5"/>-->
<!--        </LinearLayout>-->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>